--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,18 @@ name: CI
 
 on:
   workflow_dispatch:
+    inputs:
+      deployment_target:
+        description: Choose target
+        required: true
+        default: elements_page_test
+        type: choice
+        options:
+          - elements_page_test
+          - alerts_frame_windows_page_test
+          - interactions_page_test
+          - practice_form_page_test
+          - widgets_page_test
 
 jobs:
   build:
@@ -31,6 +43,23 @@ jobs:
         sudo apt install ./google-chrome-stable_current_amd64.deb
         google-chrome --version
 
-    - name: Run tests
+    - name: elements_page_test
+      if: "github.event.inputs.deployment_target == 'elements_page_test'"
       run: |
-        pytest
+        pytest tests/elements_test.py
+    - name: alerts_frame_windows_page_test
+      if: "github.event.inputs.deployment_target == 'alerts_frame_windows_page_test'"
+      run: |
+        pytest tests/alerts_frame_windows_test.py
+    - name: interactions_page_test
+      if: "github.event.inputs.deployment_target == 'interactions_page_test'"
+      run: |
+        pytest tests/interactions_test.py
+    - name: practice_form_page_test
+      if: "github.event.inputs.deployment_target == 'practice_form_page_test'"
+      run: |
+        pytest tests/practice_form_test.py
+    - name: widgets_page_test
+      if: "github.event.inputs.deployment_target == 'widgets_page_test'"
+      run: |
+        pytest tests/widgets_test.py
